--- a/server/package.json
+++ b/server/package.json
@@ -5,12 +5,13 @@
   "main": "index.js",
   "scripts": {
     "build": "npx tsc",
-    "start": "nodemon src/index.ts"
+    "start": "nodemon index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cjs-loader": "^0.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1"
   },
