--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "cjs-loader": "^0.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1"
