--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,8 @@
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "cjs-loader": "^0.1.0",
     "dotenv": "^16.4.5",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "express-async-handler": "^1.2.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
