--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,9 @@
     "cjs-loader": "^0.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "express-async-handler": "^1.2.0"
+    "express-async-handler": "^1.2.0",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
